<resources>
    <string name="app_name">CrossMotion</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_record">Record</string>
    <string name="button_squat">Air Squat</string>
    <string name="button_kbswing">Kettlebell Swing</string>

    <string name="title_activity_record_video">RecordVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_cut">cut</string>

    <string name="str_cropping_video_please_wait">Cropping Video Please Wait</string>
    <string name="title_activity_show_video">ShowVideoActivity</string>
    <string name="title_activity_show_directory">ShowDirectory</string>
    <string name="title_select_files_upload">Select Files to Upload</string>


    <string name="back2Main">Back to Main Menu</string>

    <string name="userText">User</string>
    <string name="passText">Password</string>
    <string name="loginButton">Login</string>

    <string name="upload_videos">Upload Videos</string>

    <string name="action_settings">Settings</string>
    <string name="video_save_prompt">Video Name</string>
    <string name="video_hint">.mp4</string>
    <string name="button_save_video">Save Video</string>
    <string name="save_error_msg">That name is already in use, please select a a different one!!</string>
    <string name="title_activity_show_files">ShowFilesActivity</string>
    <string name="permission_msg">Cannot proceed without the permissions!</string>
    <string name="loginErrorMsg">Invalid credentials!!!</string>

    <!-- VideoTrimmer Example strings -->
    <string name="need_permission">Need permission</string>
    <string name="app_settings">Settings</string>
    <string name="critical_permission_denied">Critical Permission Denied</string>
    <string name="allow">Allow</string>
    <string name="permission_gallery_camera">We need Gallery and Camera permissions to have video selection</string>
    <string name="toast_cannot_retrieve_selected_video">Can not retrieve selected video</string>
    <!--<string name="str_cropping_video_please_wait">Cropping Video Please Wait</string>-->
    <string name="thumb_image_for_cropped_video">Thumb Image for cropped video:</string>
    <string name="title_activity_login">Login</string>

</resources>
