<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        android:fadingEdge="horizontal|vertical|none"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PermissionMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_msg"
            android:textColor="@color/colorAccent"
            android:visibility="invisible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/recordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/white"
            android:fadingEdge="horizontal|vertical"
            android:onClick="selectMovement"
            android:text="@string/button_record"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="visible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/white"
            android:fadingEdge="horizontal|vertical"
            android:onClick="startSelectVideosActivity"
            android:text="@string/upload_videos"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="visible" />


    </LinearLayout>
</layout>