<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="622dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/dark_grey"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/userText"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/userTextBox"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#3F51B5"
            android:visibility="visible" />

        <TextView
            android:id="@+id/passText"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/passText"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/passTextBox"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#3F51B5"
            android:visibility="visible" />

        <TextView
            android:id="@+id/LoginErrorMsg"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/loginErrorMsg"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="checkLogin"
            android:text="@string/loginButton"
            android:textColor="#03A9F4"
            android:visibility="visible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>