<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveVideo">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/saveVideoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:fadingEdge="horizontal|vertical"
        android:onClick="onVideoSaveClicked"
        android:text="@string/button_save_video"
        android:textColor="@android:color/holo_blue_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855"
        tools:layout_editor_absoluteX="38dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/saveVideoBuuton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:fadingEdge="horizontal|vertical"
        android:onClick="backToMainMenu"
        android:text="@string/back2Main"
        android:textColor="@android:color/holo_blue_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="395dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/save_error_msg"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/saveVideoPrompt"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/video_hint"
        android:inputType="textPersonName"
        android:text="@string/video_hint"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/saveVideoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMsg"
        app:layout_constraintVertical_bias="0.071" />

</android.support.constraint.ConstraintLayout>